[package]
name = "warp-server-redis"
version = "0.1.0"
authors = ["Thomas Cross"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
rust-argon2 = "0.8"
rand = "0.7"
serde = {version="1.0.112", features = ["derive"] }
futures = "0.3.5"
r2d2_redis = "0.13.0"